# dwin

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Info.plist  LICENSE  Makefile  README.md
include/: config.h
scripts/: codesign.sh  format.sh  install.sh
src/app/: main.m
src/core/: wm_actions.c  wm_actions.h  wm_config.c  wm_config.h  wm_layout.c  wm_layout.h  wm_runtime.h  wm_state.c  wm_state.h
src/platform/macos/: AppDelegate.h  AppDelegate.m  mac_effects.h  mac_effects.m  mac_event_tap.h  mac_event_tap.m  mac_status_bar.h  mac_status_bar.m
tests/: test_config.m  test_core.c  test_helpers.h
